[gd_scene load_steps=4 format=3 uid="uid://iyje27gh8o6u"]

[ext_resource type="Theme" uid="uid://dh3edsr6bhyii" path="res://assets/ui/new_sapphire_theme.tres" id="1_fx65s"]
[ext_resource type="Texture2D" uid="uid://d35lfcdfcn18e" path="res://assets/creatures/aurelia/icon.png" id="1_mt1sg"]
[ext_resource type="Script" path="res://sapphire/ui/sheets/entitySheet.gd" id="2_if03s"]

[node name="ui_entitysheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_fx65s")
script = ExtResource("2_if03s")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -50.0
offset_right = 110.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
columns = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_mt1sg")
stretch_mode = 5

[node name="Resources" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Resources"]
layout_mode = 2
size_flags_vertical = 4

[node name="Life" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Resources/VBoxContainer"]
layout_mode = 2
text = "650/650"

[node name="Ap" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Resources/VBoxContainer"]
layout_mode = 2
text = "12"

[node name="Mp" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Resources/VBoxContainer"]
layout_mode = 2
text = "6"

[node name="Characteristics" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Characteristics"]
layout_mode = 2
size_flags_vertical = 4

[node name="Fire" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Characteristics/HBoxContainer"]
layout_mode = 2
text = "100"

[node name="Water" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Characteristics/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Earth" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Characteristics/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Wind" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Characteristics/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
visible = false
layout_mode = 2
color = Color(0.670588, 0.670588, 0.670588, 0)

[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
